# 1D-S-curve-motion

./: CMakeLists.txt  README.md  main.c  plot.py  test.sh
result_V0/: output.csv
result_V1/: output.csv
result_V2/: output.csv
result_V3/: output.csv
